# Surfisle

./: AGENTS.md  LICENSE  LICENSE.zh-CN.md  README.md  index.html  package.json
docs/: agent-status-hooks.md
scripts/: surfisle-agent-running.cmd  surfisle-agent-status.ps1
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_history.rs  lib.rs  main.rs
